refactor repositories
added proper singleton for DbConnection, ControllerStore and TokenStore